[package]
name = "earthnet-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "AGPL-3.0-or-later"
description = "EarthNet node: ingests signed Observations, fuses + reaches consensus, emits ConfirmedEvents."
repository = "https://github.com/devjamez/earthnet-node"

[dependencies]
earthnet-protocol = { git = "https://github.com/EarthNet-EEW/earthnet-protocol" }
prost = "0.13"
ed25519-dalek = "2"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
